DZ_9_kuber-homeworks/1.5/src/Deployment-multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
 namespace: netology
 labels:
   app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: backend
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
