DZ_9_kuber-homeworks/1.5/src/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend
 namespace: netology
 labels:
   app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: frontend
        image: nginx:1.25.4
        ports:
        - containerPort: 80
