DZ_9_kuber-homeworks/1.5/src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: netology
spec:
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1111
