DZ_9_kuber-homeworks/1.5/src/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: netology
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80
