DZ_9_kuber-homeworks/1.5/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: nginx
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: multitool
